# leitura_LM35

./: .gitignore  README.md  caract_adc.xlsx  dados.csv  main.py  pyproject.toml  window.py
src/: main.py  requirements.txt  window.py
src/resources/: styles.qss
